# route/api/platform_feedback.go
@@ -1,21 +1,20 @@
 package api
 
-// import (
-// 	"tourmate/payment-service/handler"
-// 	"tourmate/payment-service/utils/middleware"
+import (
+	"tourmate/payment-service/handler"
 
-// 	"github.com/gin-gonic/gin"
-// )
+	"github.com/gin-gonic/gin"
+)
 
-// func InitializePlatformFeedbackHandlerRoute(server *gin.Engine, port, service string) {
-// 	//Context path
-// 	var contextPath string = "api/v1/platform-feedbacks"
+func InitializePlatformFeedbackHandlerRoute(server *gin.Engine, port, service string) {
+	//Context path
+	var contextPath string = "api/v1/platform-feedbacks"
 
-// 	// Define Feedback endpoints with basic required
-// 	var authGroup = server.Group(contextPath, middleware.Authorize)
-// 	authGroup.GET("", handler.GetPlatformFeedbacks)
-// 	authGroup.GET("/user/:id", handler.GetFeedbacksByUser)
-// 	authGroup.GET("/:id", handler.GetPlatformFeedbackById)
-// 	authGroup.POST("", handler.CreatePlatformFeedback)
-// 	authGroup.PUT("", handler.UpdatePlatformFeedback)
-// }
+	// Define Feedback endpoints with basic required
+	var authGroup = server.Group(contextPath)
+	authGroup.GET("", handler.GetPlatformFeedbacks)
+	authGroup.GET("/customer/:id", handler.GetPlatformFeedbacksByCustomer)
+	authGroup.GET("/:id", handler.GetPlatformFeedbackById)
+	authGroup.POST("", handler.CreatePlatformFeedback)
+	authGroup.PUT("", handler.UpdatePlatformFeedback)
+}
